2013-10-05  Paul Smith  <psmith@gnu.org>

	* makeint.h (MAP_USERFUNC): A new map type for function names.
	* main.c (initialize_stopchar_map): Set up the function name map.

	* gnumake.h (gmk_func_ptr): Define a type for function pointers.
	(gmk_add_function): Convert the last argument to FLAGS.
	(GMK_FUNC_*): Define flags for the function.  Change the default
	behavior to "expand" since that's the most common one.

	* function.c (function_table_entry): Use new function pointer type.
	(lookup_function): Accept any valid function name character based
	on the MAP_USERFUNC values.
	(define_new_function): Use the new calling signature.  Verify that
	registered functions have valid names.

	* guile.c (guile_gmake_setup): Use new calling signatures.
	* loadapi.c (gmk_add_function): Ditto.
	* variable.h (define_new_function): Ditto.

	* doc/make.texi (Loaded Object API): Make the registered function
	API documentation more clear.

2013-10-03  Eli Zaretskii  <eliz@gnu.org>

	* function.c (abspath): Reset root_len to one for Cygwin only when
	HAVE_DOS_PATHS is defined.  Suggested by Christopher Faylor.

2013-10-02  Eli Zaretskii  <eliz@gnu.org>

	* w32/compat/posixfcn.c (tmpfile): New function, a replacement for
	the Windows libc version.

	Fix $abspath on Cygwin when HAVE_DOS_PATHS is in effect.
	* function.c (IS_ABSOLUTE) [__CYGWIN__]: Special definition for
	Cygwin.
	(abspath) [__CYGWIN__]: Reset root_len to 1 if the absolute file
	name has the Posix /foo/bar form.
	[HAVE_DOS_PATHS]: Use root_len instead of hard-coded 2.

2013-10-01  Paul Smith  <psmith@gnu.org>

	* configure.ac: Update version to 3.99.93.
	* NEWS: Ditto.

2013-09-30  Paul Smith  <psmith@gnu.org>

	* guile.c: Portability fixes for Guile 1.8.

2013-09-29  Paul Smith  <psmith@gnu.org>

	* output.c (output_dump): Always write Enter/Leave messages to stdio.
	(log_working_directory): This now always writes to stdio, so we
	don't need the struct output parameter anymore.